--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
 
     <!-- DIAGRAM -->
-    <section class="diagram py-5" id="diagram">
+    <section class="diagram" id="diagram">
       <div class="container py-3">
         <div class="row">
           <div class="col-12 text-center">
