--- a/index.html
+++ b/index.html
@@ -345,6 +345,29 @@
       </div>
     </section>
 
+    <!-- SIGN UP -->
+    <section class="sign-up py-5 bg-blue white text-center" id="signUp">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="white">
+              SIGN ME UP FOR RELEASE UPDATES
+            </h2>
+            <div class="mktoFormWrapper">
+              <!-- FOOTER FORM HERE -->
+              <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
+              <div class="d-flex justify-content-center pt-3">
+                <form id="mktoForm_1479" class="text-center">
+                </form>
+              </div>
+              <script>MktoForms2.loadForm("https://leap.jfrog.com", "256-FNZ-187", 1479);</script>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- OUR USERS -->
     <section class="users my-4 py-5" id="users">
       <div class="container">
@@ -952,6 +975,64 @@
     >
       <div class="container">
         <div class="row">
+          <div class="col-12">
+            <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
+              <!-- TWITTER -->
+              <li>
+                <a
+                  class="mr-2"
+                  href="https://twitter.com/conan_io"
+                >
+                  <img
+                    class="lazy"
+                    data-src="img/social/twitter.svg"
+                    alt="twitter"
+                  >
+                </a>
+              </li>
+              <!-- FACEBOOK -->
+              <li>
+                <a
+                  class="mr-2"
+                  href="https://facebook.com/conan.io"
+                >
+                  <img
+                    class="lazy"
+                    data-src="img/social/facebook.svg"
+                    alt="facebook"
+                  >
+                </a>
+              </li>
+              <!-- SLACK -->
+              <li>
+                <a
+                  class="mr-2"
+                  href="https://cpplang.​slack.​com/?id=conan"
+                >
+                  <img
+                    class="lazy"
+                    data-src="img/social/slack.svg"
+                    alt="slack"
+                  >
+                </a>
+              </li>
+              <!-- GITHUB -->
+              <li>
+                <a
+                  class="mr-2"
+                  href="https://github.com/conan-io"
+                >
+                  <img
+                    class="lazy"
+                    data-src="img/social/github.svg"
+                    alt="github"
+                  >
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row justify-content-center">
           <div class="col-md-7 footer-left d-md-flex d-none align-items-center">
             <div class="footer-menu w-100">
               <div class="row">
@@ -1012,75 +1093,6 @@
             </div>
           </div>
 
-          <div class="col-md-5 footer-right">
-            <div class="inner pl-0 pl-md-4">
-
-              <h4 class="mb-3 sign-up-title">Sign up for release updates</h4>
-              <div class="mktoFormWrapper">
-                <!-- FOOTER FORM HERE -->
-                <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
-                <form id="mktoForm_1479">
-                </form>
-                <script>MktoForms2.loadForm("https://leap.jfrog.com", "256-FNZ-187", 1479);</script>
-              </div>
-
-              <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0">
-                <!-- TWITTER -->
-                <li>
-                  <a
-                    class="mr-2"
-                    href="https://twitter.com/conan_io"
-                  >
-                    <img
-                      class="lazy"
-                      data-src="img/social/twitter.svg"
-                      alt="twitter"
-                    >
-                  </a>
-                </li>
-                <!-- FACEBOOK -->
-                <li>
-                  <a
-                    class="mr-2"
-                    href="https://facebook.com/conan.io"
-                  >
-                    <img
-                      class="lazy"
-                      data-src="img/social/facebook.svg"
-                      alt="facebook"
-                    >
-                  </a>
-                </li>
-                <!-- SLACK -->
-                <li>
-                  <a
-                    class="mr-2"
-                    href="https://cpplang.​slack.​com/?id=conan"
-                  >
-                    <img
-                      class="lazy"
-                      data-src="img/social/slack.svg"
-                      alt="slack"
-                    >
-                  </a>
-                </li>
-                <!-- GITHUB -->
-                <li>
-                  <a
-                    class="mr-2"
-                    href="https://github.com/conan-io"
-                  >
-                    <img
-                      class="lazy"
-                      data-src="img/social/github.svg"
-                      alt="github"
-                    >
-                  </a>
-                </li>
-              </ul>
-
-            </div>
-          </div>
         </div>
 
       </div>
